Update package.json homepage

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://noorulaink00.github.io/artistaanpk",
+  "homepage": "https://artistaanpk.vercel.app/",
   "name": "artistaan",
   "version": "0.1.0",
   "private": true,
